bug: Render logo on top-left on iPhone

--- a/js-users/js-users/src/App.css
+++ b/js-users/js-users/src/App.css
@@ -8,10 +8,6 @@ header,
     background-color: #454d55;
 }
 
-.logo {
-    width: 50px;
-}
-
 nav {
     border: 5px solid #fff;
     border-radius: 5px;
